--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="col-md-4">
                 <div class="withdraw allstyle">
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$<span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -96,8 +96,8 @@
             // const totalBalance = depositNumber + currentBalanceNumber;
             // document.getElementById("currentBalance").innerText = totalBalance;
 
-            update("currentBalance", depositNumber);
-            update("currentDeposit", depositNumber);
+            updateSpanText("currentBalance", depositNumber);
+            updateSpanText("currentDeposit", depositNumber);
 
             document.getElementById("depositAmount").value = "";
         })
@@ -106,8 +106,11 @@
 
         const withdrawBtn = document.getElementById("addWithdraw");
         withdrawBtn.addEventListener("click", function () {
-            const withdrawNumber = document.getElementById("withdrawAmount").value;
-            console.log(withdrawNumber);
+            const withdrawNumber = getInputNumber("withdrawAmount");
+
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1 * withdrawNumber);
+            document.getElementById("withdrawAmount").value = "";
         })
 
         function getInputNumber(id) {
@@ -117,10 +120,11 @@
 
         }
 
-        function update(id, depositNumber) {
+        function updateSpanText(id, addedNumber) {
             const current = document.getElementById(id).innerText;
             const currentNumber = parseFloat(current);
-            const totalAmount = depositNumber + currentNumber;
+            const totalAmount = addedNumber + currentNumber;
+
             document.getElementById(id).innerText = totalAmount;
 
         }
